--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "marketplace": "file:",
     "mongoose": "^8.8.1",
     "morgan": "~1.9.1",
     "nodemon": "^3.1.7",
